fix back to top position and remove double scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
 
   body {
     @apply min-h-screen;
+    overflow-x: hidden;
   }
 
   h1, h2, h3, h4, h5, h6 {
